Add facet support, minor cleanup
Change-Id: I67742aa0830caa90fc779f356cae0b1f54c2eea7

--- a/end-to-end/search-interface/public/index.html
+++ b/end-to-end/search-interface/public/index.html
@@ -12,17 +12,18 @@
   <body>
     <div class="content">
       <div id="app" hidden>
-        <div class="header">
+        <div id="header">
           <button id="sign-out">Sign-out</button>
         </div>
         <!-- [START cloud_search_github_tutorial_esw_html] -->
-        <div class="search_bar">
+        <div id="search_bar">
           <div>
             <div id="suggestions_anchor">
               <input type="text" id="search_input" placeholder="Search for...">
             </div>
           </div>
         </div>
+        <div id="facet_results" ></div>
         <div id="search_results" ></div>
         <!-- [END cloud_search_github_tutorial_esw_html] -->
       </div>
