Fix missing facets and tweak CSS for widget samples, add custom facet sample
Change-Id: I583c3b0751c144f56e76b0b3189eb8940ebf278a

--- a/serving/widget/public/index.html
+++ b/serving/widget/public/index.html
@@ -13,7 +13,10 @@
       <li><a href="with_decorated_element">Example of using an adapter to
         decorate elements and apply custom class names.</a></li>
       <li><a href="with_custom_element">Example of using an adapter to
-        override the creation of elements.</a></li>
+        override the creation of search result elements.</a></li>
+      <li><a href="with_custom_facet">Example of using an adapter to
+        override the creation of facet elements. Requires a search app
+        with at least 1 custom datasource with facets enabled.</a></li>
       <li><a href="with_request_interceptor">Example of using an adapter
         to intercept requests and dynamically filter sources.</a></li>
       <li><a href="with_signin">Example of using the Google Sign-in for
