--- a/serving/widget/public/with_request_interceptor/index.html
+++ b/serving/widget/public/with_request_interceptor/index.html
@@ -27,6 +27,7 @@
           </select>
         </div>
       </div>
+      <div id="facet_results"></div>
       <div id="search_results"></div>
     </div>
     <!-- Polyfills for IE11 for fetch/promises -->
