--- a/serving/widget/public/with_custom_facet/index.html
+++ b/serving/widget/public/with_custom_facet/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
     <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
-    <link rel="stylesheet" href="with_custom_element/app.css">
+    <link rel="stylesheet" href="with_custom_facet/app.css">
   </head>
   <body>
     <div class="content">
@@ -18,27 +18,12 @@
       <div id="facet_results"></div>
       <div id="search_results"></div>
     </div>
-
-    <template id="suggestion_template">
-      <div class="suggested_query">{{suggested query}}</div>
-    </template>
-
-    <template id="result_template">
-      <div class="query_result">
-        <div class="query_title">
-          <a class="title" href="{{href}}">{{title}}</a>
-        </div>
-        <div class="query_snippet">
-          {{snippet}}
-        </div>
-      </div>
-    </template>
     <!-- Polyfills for IE11 for fetch/promises -->
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
     <script src="https://unpkg.com/unfetch/polyfill"></script>
 
     <!-- Script for this app -->
-    <script src="with_custom_element/app.js"></script>
+    <script src="with_custom_facet/app.js"></script>
 
     <!-- Google API loader -->
     <script src="https://apis.google.com/js/api.js?mods=enable_cloud_search_widget&onload=onLoad" async defer></script>
