--- a/serving/widget/public/with_decorated_element/index.html
+++ b/serving/widget/public/with_decorated_element/index.html
@@ -15,6 +15,7 @@
           <input type="text" id="search_input" placeholder="Search for...">
         </div>
       </div>
+      <div id="facet_results"></div>
       <div id="search_results"></div>
     </div>
     <!-- Polyfills for IE11 for fetch/promises -->
