Add region tag for widget markup
Change-Id: I0760fd3f4c714bca4e18c6f0173e620dc62f9ed4

--- a/serving/widget/public/with_css/index.html
+++ b/serving/widget/public/with_css/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="content">
+      <!-- [START cloud_search_widget_html] -->
       <div id="search_bar">
         <div id="suggestions_anchor">
           <input type="text" id="search_input" placeholder="Search for...">
@@ -17,6 +18,7 @@
       </div>
       <div id="facet_results"></div>
       <div id="search_results"></div>
+      <!-- [END cloud_search_widget_html] -->
     </div>
     <!-- Polyfills for IE11 for fetch/promises -->
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
