--- a/serving/widget/public/with_css/index.html
+++ b/serving/widget/public/with_css/index.html
@@ -27,7 +27,9 @@
     <!-- Script for this app -->
     <script src="with_css/app.js"></script>
 
+    <!-- [START cloud_search_widget_loader] -->
     <!-- Google API loader -->
     <script src="https://apis.google.com/js/api.js?mods=enable_cloud_search_widget&onload=onLoad" async defer></script>
+    <!-- [END cloud_search_widget_loader] -->
   </body>
 </html>
