--- a/serving/widget/public/with_request_interceptor/index.html
+++ b/serving/widget/public/with_request_interceptor/index.html
@@ -14,6 +14,7 @@
         <div id="suggestions_anchor">
           <input type="text" id="search_input" placeholder="Search for...">
         </div>
+        <!-- [START cloud_search_source_select] -->
         <div>
           <span>Source</span>
           <select id="sources">
@@ -26,6 +27,7 @@
             <option value="GOOGLE_KEEP">Keep</option>
           </select>
         </div>
+        <!-- [END cloud_search_source_select] -->
       </div>
       <div id="facet_results"></div>
       <div id="search_results"></div>
