Update region tags for including snippets in docs
Change-Id: I0b7eb2a682ed2eb83d5dfc245a5007f94c11d27d

--- a/end-to-end/search-interface/public/index.html
+++ b/end-to-end/search-interface/public/index.html
@@ -16,7 +16,8 @@
         <div id="header">
           <button id="sign-out">Sign-out</button>
         </div>
-        <!-- [START_EXCLUDE] -->
+        <!-- Markup for widget...-->
+        <!-- [START_EXCLUDE silent] -->
         <!-- [START cloud_search_tutorial_search_html] -->
         <div id="search_bar">
           <div>
