Updating readme and index to include SSO sample

--- a/serving/widget/public/index.html
+++ b/serving/widget/public/index.html
@@ -21,6 +21,8 @@
         to intercept requests and dynamically filter sources.</a></li>
       <li><a href="with_signin">Example of using the Google Sign-in for
         websites library to handle authorization directly.</a></li>
+      <li><a href="with_sso">Example of silent SSO redirection,
+        for use with an external SAML 2.0 identity provider.</a></li>
     </ul>
   </body>
 </html>
