--- a/serving/widget/public/with_sso/index.html
+++ b/serving/widget/public/with_sso/index.html
@@ -31,8 +31,10 @@
 
     <!-- Script for this app -->
     <script src="/with_sso/app.js"></script>
-
+    
+    <!-- [START cloud_search_widget_loader] -->
     <!-- Google API loader -->
     <script src="https://apis.google.com/js/api.js?mods=enable_cloud_search_widget&onload=onLoad" async defer></script>
+    <!-- [END cloud_search_widget_loader] -->
   </body>
 </html>
